# Engine2D

./: CMakeLists.txt  Makefile  README.md  mygame
engine/core/: Engine.cpp  Engine.hpp
engine/entity/: Entity.cpp  Entity.hpp
engine/entity/enemy/: Enemy.cpp  Enemy.hpp
engine/entity/enemy/movementStrategy/simpleFollowStrategy/: SimpleFollowStrategy.cpp
engine/entity/movementStrategy/: MovementStrategy.hpp
engine/entity/movementStrategy/simpleFollowStrategy/: SimpleFollowStrategy.cpp  SimpleFollowStrategy.hpp
engine/entity/npc/: Npc.cpp  Npc.hpp
engine/entity/player/: Player.cpp  Player.hpp
engine/entity/player/playerMovement/: PlayerMovement.hpp
engine/entity/player/playerMovement/simplePlayerMovement/: SimplePlayerMovement.cpp  SimplePlayerMovement.hpp
engine/fps/: Fps.cpp  Fps.hpp
engine/input/: InputManager.cpp  InputManager.hpp
engine/renderer/: Renderer.cpp  Renderer.hpp
engine/renderer/camera/: Camera.cpp  Camera.hpp
engine/renderer/platform/: Platform.hpp
engine/renderer/platform/randomPlatformGenerator/: RandomPlatformGenerator.hpp
game/: Game.cpp  Game.hpp  GameFactory.hpp
src/: main.cpp
